force-app/main/default/objects/ucinn_ascendv2__Prospect_Management_Setting__mdt/ucinn_ascendv2__Prospect_Management_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Prospect Management Setting</label>
    <pluralLabel>Prospect Management Settings</pluralLabel>
</CustomObject>