force-app/main/default/objects/ucinn_ascendv2__Prospect_Management_Setting__mdt/fields/ucinn_ascendv2__Enable_Generated_Content_Contact_Reports__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Generated_Content_Contact_Reports__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Generated Content Contact Reports</label>
    <type>Checkbox</type>
</CustomField>