force-app/main/default/objects/ucinn_ascendv2__Prospect_Management_Setting__mdt/fields/ucinn_ascendv2__engage_Email_Brand_Voice__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__engage_Email_Brand_Voice__c</fullName>
    <label>engage Email Brand Voice</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>