force-app/main/default/objects/ucinn_ascendv2__Prospect_Management_Setting__mdt/fields/ucinn_ascendv2__engage_Email_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__engage_Email_Configuration__c</fullName>
    <label>Generated AI Content Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>